--- a/box.css
+++ b/box.css
@@ -1,14 +1,12 @@
-.box1{
+.box1 {
     width: 300px;
     height: 300px;
-    background-color: #fffff0;
+    background-color: #00ffff; 
     padding: 30px;
 }
-
-.box2{
-	width: 100px;
+.box2 {
+    width: 100px;
     height: 100px;
     background-color: blue;
-    border:5px solid yellow;
-
+    border: 5px solid yellow;
 }
