--- a/1_4.css
+++ b/1_4.css
@@ -9,3 +9,47 @@
     display: block;
     clear: both;
 }
+
+.header{
+	background-color:red;
+	height: 50px;
+	width: 100%
+}
+.main-visual{
+	height: 500px;
+	width:100%;
+	background-color:orange;
+}
+
+.main{
+	height: 1400px;
+	margin:0 auto;
+	width:960px;
+}
+
+.left-sidebar{
+	width:230px;
+	background-color:#66FF99	;
+	float: left;
+	height:1400px;
+}
+
+.blog{
+	width:500px;
+	float: left;
+	background-color:#00CC00;
+	height: 1400px
+}
+
+.right-sidebar{
+	width:230px;
+	float: left;
+	background-color:#66FF99;
+	height:1400px;
+}
+
+.footer{
+	width:100%;
+	height:100px;
+	background-color:blue;
+}
